pxc/tests/test_031_thrattr/novt.px

public namespace novt;
import common -;

mtvaluetype struct bar {
  int z;
}

valuetype struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  ptr{bar} bp = ptr(bx); // error: not valuetype
  function int getbz() const { return bp->z; }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

